--- a/content/post/2017-01-17-pentax-k70.md
+++ b/content/post/2017-01-17-pentax-k70.md
@@ -40,7 +40,7 @@ metaAlignment: center
 {{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/2-2.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-2.jpg" title="↑理光家一致设计的灰底盒子，跟DA 15的盒子做个对比" >}}
 {{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/2-3.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-3.jpg" title="↑开箱的感谢辞" >}}
 {{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/2-4.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-4.jpg" title="↑完整的说明书" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/2-5.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-5.jpg" title="↑除了机身，配件还有电源线、座充、电池和肩带" >}}
+{{< image classes="clear fig-50" src="/images/2017-01-17-pentax-k70/2-5.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-5.jpg" title="↑除了机身，配件还有电源线、座充、电池和肩带" >}}
 
 配套的修图软件Digital Camera Utility 5 (DCU5) 只能随机附送的CD安装，官网只提供下载升级包，要找光驱安装这点略坑爹。更坑爹的是目前Adobe暂不支持像素偏移的RAW，只能使用这个巨难用的DCU5来解。
 
@@ -50,26 +50,26 @@ metaAlignment: center
 沿袭自K-s2的快门灯环。跟理光自家的GR ii一脉相承。
 
 {{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/4-4.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-4.jpg" title="↑左侧麦克风接口，Fx1键可自定义功能" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/4-2.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-2.jpg" title="↑握柄非常饱满" >}}
+{{< image classes="clear fig-50" src="/images/2017-01-17-pentax-k70/4-2.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-2.jpg" title="↑握柄非常饱满" >}}
 
 TCSTV里面Chris吐槽说手小的话会握不住，我手大感觉还好。但相比起来原来K-5握感确实会更偏紧致。
 
 {{< image classes="fancybox fig-33" src="/images/2017-01-17-pentax-k70/4-3.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-3.jpg" title="↑翻转屏要是加入触控功能就更好了" >}}
 {{< image classes="fancybox fig-33" src="/images/2017-01-17-pentax-k70/4-1.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-1.jpg" title="↑正面" >}}
-{{< image classes="fancybox fig-33" src="/images/2017-01-17-pentax-k70/4-5.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-5.jpg" title="↑这个档位的机型只支持一个SD卡" >}}
+{{< image classes="clear fig-33" src="/images/2017-01-17-pentax-k70/4-5.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-5.jpg" title="↑这个档位的机型只支持一个SD卡" >}}
 
 {{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/4-6.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-6.jpg" title="↑机身材质塑料,但黑版看起来还蛮有金属感的" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/4-7.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-7.jpg" title="↑带前后双波轮和宾得绿键,Fx2键可自定义,三个用户模式" >}}
+{{< image classes="clear fig-50" src="/images/2017-01-17-pentax-k70/4-7.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-7.jpg" title="↑带前后双波轮和宾得绿键,Fx2键可自定义,三个用户模式" >}}
 {{< image classes="fancybox fig-25" src="/images/2017-01-17-pentax-k70/4-8.jpg" thumbnail="/images/2017-01-17-pentax-k70/4-8.jpg" title="↑按键面积大而突出" >}}
-{{< image classes="fancybox fig-75" src="/images/2017-01-17-pentax-k70/4-9.png" thumbnail="/images/2017-01-17-pentax-k70/4-9.png" title="↑底部防滑条,产地菲律宾" >}}
+{{< image classes="clear fig-75" src="/images/2017-01-17-pentax-k70/4-9.png" thumbnail="/images/2017-01-17-pentax-k70/4-9.png" title="↑底部防滑条,产地菲律宾" >}}
 
 {{< image classes="right nocaption fig-50" src="/images/2017-01-17-pentax-k70/5-1.jpg" thumbnail="/images/2017-01-17-pentax-k70/5-1.jpg" >}}
 {{< image classes="right nocaption fig-50" src="/images/2017-01-17-pentax-k70/5-2.jpg" thumbnail="/images/2017-01-17-pentax-k70/5-2.jpg" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/5-3.jpg" thumbnail="/images/2017-01-17-pentax-k70/5-3.jpg" title="↑搭配 Da 70 limited 饼干头" >}}
+{{< image classes="clear fig-50" src="/images/2017-01-17-pentax-k70/5-3.jpg" thumbnail="/images/2017-01-17-pentax-k70/5-3.jpg" title="↑搭配 Da 70 limited 饼干头" >}}
 
 {{< image classes="left nocaption fig-50" src="/images/2017-01-17-pentax-k70/6-2.jpg" thumbnail="/images/2017-01-17-pentax-k70/6-2.jpg" >}}
 {{< image classes="left nocaption fig-50" src="/images/2017-01-17-pentax-k70/6-3.jpg" thumbnail="/images/2017-01-17-pentax-k70/6-3.jpg" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/6-1.jpg" thumbnail="/images/2017-01-17-pentax-k70/6-1.jpg" title="↑搭配 Da 15 limited 饼干头" >}}
+{{< image classes="clear fig-50" src="/images/2017-01-17-pentax-k70/6-1.jpg" thumbnail="/images/2017-01-17-pentax-k70/6-1.jpg" title="↑搭配 Da 15 limited 饼干头" >}}
 
 {{< image classes="left fig-50" src="/images/2017-01-17-pentax-k70/7-3.png" thumbnail="/images/2017-01-17-pentax-k70/7-3.png" title="↑WiFi传输与遥控,app不稳定经常断" >}}
 {{< image classes="left fig-50" src="/images/2017-01-17-pentax-k70/7-2.jpg" thumbnail="/images/2017-01-17-pentax-k70/7-2.jpg" title="↑Live View模式增加了混合式对焦系统" >}}
