--- a/content/post/2017-05-08-pentax-kp.md
+++ b/content/post/2017-05-08-pentax-kp.md
@@ -28,7 +28,7 @@ metaAlignment: center
 ### 开箱
 
 {{< image classes="fancybox fig-50" src="/images/2017-05-08-pentax-kp/8-2t.jpg" thumbnail="/images/2017-05-08-pentax-kp/8-2t.jpg" title="↑说明书、dcu5安装盘，保修卡，宣传单，换手柄的小扳手" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-05-08-pentax-kp/8-3t.jpg" thumbnail="/images/2017-05-08-pentax-kp/8-3t.jpg" title="↑取出机身" >}}
+{{< image classes="clear fig-50" src="/images/2017-05-08-pentax-kp/8-3t.jpg" thumbnail="/images/2017-05-08-pentax-kp/8-3t.jpg" title="↑取出机身" >}}
 
 ### 外观
 
@@ -66,19 +66,19 @@ metaAlignment: center
 * 底部
 
 {{< image classes="fancybox nocaption fig-50" src="/images/2017-05-08-pentax-kp/5-1t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-1t.jpg" >}}
-{{< image classes="fancybox nocaption fig-50" src="/images/2017-05-08-pentax-kp/5-2t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-2t.jpg" >}}
+{{< image classes="clear nocaption fig-50" src="/images/2017-05-08-pentax-kp/5-2t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-2t.jpg" >}}
 
 ↑电池用的跟K70是一个型号。官方续航是390张。很不够用。
 
 * 背面
 
 {{< image classes="fancybox fig-50" src="/images/2017-05-08-pentax-kp/5-3t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-3t.jpg" title="↑翻转屏不能反转360来自拍，但是比较方便腰平取景">}}
-{{< image classes="fancybox fig-50" src="/images/2017-05-08-pentax-kp/5-4t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-4t.jpg" title="↑夸张的iso 819200" >}}
+{{< image classes="clear fig-50" src="/images/2017-05-08-pentax-kp/5-4t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-4t.jpg" title="↑夸张的iso 819200" >}}
 
 * 侧面
 
 {{< image classes="fancybox fig-50" src="/images/2017-05-08-pentax-kp/5-5t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-5t.jpg" title="↑只有一个SD卡槽差评" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-05-08-pentax-kp/5-7t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-7t.jpg" title="↑快门线和DC in接口" >}}
+{{< image classes="clear fig-50" src="/images/2017-05-08-pentax-kp/5-7t.jpg" thumbnail="/images/2017-05-08-pentax-kp/5-7t.jpg" title="↑快门线和DC in接口" >}}
 
 * 可更换手柄
 
@@ -86,7 +86,7 @@ metaAlignment: center
 {{< image classes="fancybox nocaption fig-50" src="/images/2017-05-08-pentax-kp/6-2t.jpg" thumbnail="/images/2017-05-08-pentax-kp/6-2t.jpg" >}}
 {{< image classes="fancybox nocaption fig-33" src="/images/2017-05-08-pentax-kp/6-3t.jpg" thumbnail="/images/2017-05-08-pentax-kp/6-3t.jpg" >}}
 {{< image classes="fancybox nocaption fig-33" src="/images/2017-05-08-pentax-kp/6-4t.jpg" thumbnail="/images/2017-05-08-pentax-kp/6-4t.jpg" >}}
-{{< image classes="fancybox nocaption fig-33" src="/images/2017-05-08-pentax-kp/6-5t.jpg" thumbnail="/images/2017-05-08-pentax-kp/6-5t.jpg" >}}
+{{< image classes="clear nocaption fig-33" src="/images/2017-05-08-pentax-kp/6-5t.jpg" thumbnail="/images/2017-05-08-pentax-kp/6-5t.jpg" >}}
 
 机身上默认安装的是小号手柄，握感和GR类似，不过手持起来比GR沉很多；中号手柄握感我觉得跟小号没啥区别；大号手柄则因为前方有比较明显的着力点，装上之后手感更像传统单反，但是依然没有k5或者K70那种手柄来的舒服。这种设计明显是为了颜值而牺牲了握感。但可能是GR握习惯了，我一般用小号手柄。
 
