--- a/content/post/2017-01-17-pentax-k70.md
+++ b/content/post/2017-01-17-pentax-k70.md
@@ -38,7 +38,7 @@ metaAlignment: center
 {{< image classes="fancybox fig-100" src="/images/2017-01-17-pentax-k70/2-1.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-1.jpg" title="↑以下开箱图片均出自理光GR ii" >}}
 
 {{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/2-2.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-2.jpg" title="↑理光家一致设计的灰底盒子，跟DA 15的盒子做个对比" >}}
-{{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/2-3.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-3.jpg" title="↑开箱的感谢辞" >}}
+{{< image classes="clear fig-50" src="/images/2017-01-17-pentax-k70/2-3.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-3.jpg" title="↑开箱的感谢辞" >}}
 {{< image classes="fancybox fig-50" src="/images/2017-01-17-pentax-k70/2-4.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-4.jpg" title="↑完整的说明书" >}}
 {{< image classes="clear fig-50" src="/images/2017-01-17-pentax-k70/2-5.jpg" thumbnail="/images/2017-01-17-pentax-k70/2-5.jpg" title="↑除了机身，配件还有电源线、座充、电池和肩带" >}}
 
