--- a/content/post/2017-05-08-pentax-kp.md
+++ b/content/post/2017-05-08-pentax-kp.md
@@ -16,8 +16,10 @@ coverImage: /images/2017-05-08-pentax-kp/1-1t.jpg
 metaAlignment: center
 ---
 
-作为同焦段素质最好的镜头(滑稽)，宾得家的Limited镜头有着特立独行的设计理念。最新推出的kp作为其理想的亮骚后背[^1]，总算更加淋漓尽致的体现出了一众饼干头的追求方向：为了追求小巧不惜对镜头光圈进行妥协，强化操作体验并突显整个相机系统慢摄流的玩味属性，让人重拾按下快门的乐趣。单纯就外形而言可能有人会觉得KP的额头太大而更偏爱奥巴em5那样的造型(我也觉得em5造型更讨喜些);但不得不承认，宾得kp搭配众limited头的颜值至少是不低的.
+复古情怀向中端单反宾得KP开箱体验与实测心得。
 <!--more-->
+
+作为同焦段素质最好的镜头(滑稽)，宾得家的Limited镜头有着特立独行的设计理念。最新推出的kp作为其理想的亮骚后背[^1]，总算更加淋漓尽致的体现出了一众饼干头的追求方向：为了追求小巧不惜对镜头光圈进行妥协，强化操作体验并突显整个相机系统慢摄流的玩味属性，让人重拾按下快门的乐趣。单纯就外形而言可能有人会觉得KP的额头太大而更偏爱奥巴em5那样的造型(我也觉得em5造型更讨喜些);但不得不承认，宾得kp搭配众limited头的颜值至少是不低的.
 
 ### 前言
 
@@ -94,25 +96,9 @@ metaAlignment: center
 
 用下来发觉最大的问题在可靠性上，首当其冲的便是脆弱的电池——前段时间去了阿拉斯加，在室外零下30°环境下相机很容易被冻没电，白天大概能坚持几十分钟，晚上可能就十几分钟，长时间曝光的话拍不了几张就自动关机。我只能不停地轮流更换手头的3块电池——每次揣两块在大衣的内兜里，等温度上来恢复电力之后再接着用（来回换电池实在太麻烦了，尤其是自拍的时候突然没电了特别火大）。本来还想测试下相机里面的星轨和延时摄影功能的，但是极地寒冷室外条件下，放十几分钟没拍几张就自动断电，根本行不通。所以最后也没能拍成星轨和延时摄影。需要提高的另一个方面就是手机app——有时候会莫名其妙的无法同步画面，且手机无法遥控释放快门，逼得最后我只能用延时自拍模式连拍10张来搞定旅行合影照。
 
+{{< image classes="right fig-100" src="/images/2017-05-08-pentax-kp/8-1t.jpg" thumbnail="/images/2017-05-08-pentax-kp/8-1t.jpg" title="↑Joby便携三脚架搭配宾得 kp" >}}
+
 可以看出来，在恶劣环境下可靠性主要还是被电池拖累太多。风光照当然可以拍，画质出众高感在aps-c里也是位列前茅，只是没了GPS少了追星功能还是挺可惜的。极地环境下靠三防机身倒是可以顶住阿拉斯加白天雪地里雪洒机身上的不利情况，这点还是不错的。如果就像[宣传片](https://youtu.be/Rnu4JsmmOW8)里展示的那样，拿kp配个20-40，在旅游时去拍拍扫街照，这机子还是很能胜任的。
-
-{{< image classes="right fig-100" src="/images/2017-05-08-pentax-kp/8-1t.jpg" thumbnail="/images/2017-05-08-pentax-kp/8-1t.jpg" title="Joby便携三脚架配kp" >}}
-
-总结一下，和自家APS-C机身比，KP优点是亮骚和高感（以及相对以往机身可感知但仍然不堪重用的对焦改进），缺点则是续航。
-相比别家，优点有
-
-1. 对标同级别机身(主要是APS-C机身)时强悍的高感（参见[dpreview](https://www.dpreview.com/reviews/pentax-kp-review)的评价，尤其是用raw拍摄时）
-2. 特立独行的limited镜头带来的可玩性和同等光圈下不俗的素质
-3. 五轴防抖和三防(以及防抖衍生出来的超解和追星功能)
-
-缺点则有
-
-1. 一如既往的羸弱追焦能力
-2. 跟不上时代的视频能力
-3. 缺乏大光圈镜头
-4. 发行价较贵，性价比较低
-
-此外就是外观和可更换手柄见仁见智，有人喜欢有人讨厌。但总之，如果作为爱好者想在APS-C相机中找一台亮骚好玩的相机，那么在富士的X系列之外，宾得这款KP也可算是值得考虑的对象了吧。
 
 ### 样片
 
@@ -124,6 +110,23 @@ metaAlignment: center
 {{< image classes="fancybox nocaption fig-25" src="/images/2017-05-08-pentax-kp/7-3.jpg" thumbnail="/images/2017-05-08-pentax-kp/7-3t.jpg" >}}
 {{< image classes="fancybox nocaption fig-25" src="/images/2017-05-08-pentax-kp/7-5.jpg" thumbnail="/images/2017-05-08-pentax-kp/7-5t.jpg" >}}
 {{< image classes="clear nocaption fig-25" src="/images/2017-05-08-pentax-kp/7-7.jpg" thumbnail="/images/2017-05-08-pentax-kp/7-7t.jpg" >}}
+
+### 总结
+
+和自家APS-C机身比，KP有着亮骚的优点（我从K70换KP的主要原因）以及相对以往机身可感知但仍不堪重用的对焦改进，但续航是硬伤。相比佳能尼康同价位机器，优点有
+
+1. 对标同级别机身(主要是APS-C机身)时强悍的高感（参见[dpreview](https://www.dpreview.com/reviews/pentax-kp-review)的评价，尤其是用raw拍摄时）
+2. 特立独行的limited镜头带来的可玩性和同等光圈下不俗的素质
+3. 五轴防抖和三防(以及防抖衍生出来的超解和追星功能)
+
+缺点则是
+
+1. 一如既往的羸弱追焦能力
+2. 跟不上时代的视频能力
+3. 缺乏大光圈镜头（看看人家富士）
+4. 发行价较贵，性价比较低
+
+此外就是外观和可更换手柄见仁见智，有人喜欢有人讨厌。但总的来说，这是有着很不错的画质，足够性能的相机，配上几枚limited镜头，够把玩很久，是那种适合悠闲的慢摄流在心情好的空暇时品玩的东西。如果作为摄影爱好者想在APS-C相机中找一台亮骚好玩的，那在富士的X系列外，宾得这款KP也可算是值得考虑的对象吧。
 
 #### 参考
 [dpreview](https://www.dpreview.com/reviews/pentax-kp-review)  
