--- a/content/post/2017-01-17-pentax-k70.md
+++ b/content/post/2017-01-17-pentax-k70.md
@@ -10,7 +10,7 @@ tags:
 - 开箱体验
 - 器材党
 slug: pentax k70
-thumbnailImagePosition: left
+thumbnailImagePosition: right
 thumbnailImage: /images/2017-01-17-pentax-k70/6-3.jpg
 coverImage: /images/2017-01-17-pentax-k70/6-3.jpg
 metaAlignment: center
