--- a/content/post/2017-05-08-pentax-kp.md
+++ b/content/post/2017-05-08-pentax-kp.md
@@ -10,7 +10,7 @@ tags:
 - 开箱体验
 - 器材党
 slug: pentax kp
-thumbnailImagePosition: left
+thumbnailImagePosition: right
 thumbnailImage: /images/2017-05-08-pentax-kp/1-1t.jpg
 coverImage: /images/2017-05-08-pentax-kp/1-1t.jpg
 metaAlignment: center
