--- a/content/post/2018-01-03-coco.md
+++ b/content/post/2018-01-03-coco.md
@@ -10,7 +10,7 @@ tags:
 - death
 slug: coco
 autoThumbnailImage: false
-thumbnailImagePosition: top
+thumbnailImagePosition: right
 thumbnailImage: /images/2018-01-03/coco.jpg
 coverImage: /images/2018-01-03/coco.jpg
 metaAlignment: center
