--- a/content/post/2018-01-10-my-goal.md
+++ b/content/post/2018-01-10-my-goal.md
@@ -28,10 +28,11 @@ Dull guys are all the same, while cool souls each have their own shine.
 这话讲得对我胃口，让我想起罗曼罗兰曾将英雄主义定义为“认清了生活的真相后依然热爱生活”，而鲁迅也把真正的勇士描述成“敢于直面惨淡的人生，敢于正视淋漓的鲜血”。他们没有“人艰不拆[^1]”，都毫不避讳的把生活的阴暗面揭露出来，让人浑身难受，然后又慷慨的向我们指出一条出路，那便是去迎接这份挑战。
 
 
+https://twitter.com/tjholowaychuk
 
+http://tjholowaychuk.com/
 
-
-
+vue.js
 
 
 
