new post update

--- a/content/post/2018-01-10-my-goal.md
+++ b/content/post/2018-01-10-my-goal.md
@@ -1,5 +1,5 @@
 ---
-title: 当我谈论有趣时，我在谈论什么
+title: 当谈论有趣时，我在谈论什么
 date: 2018-01-10
 categories:
 - article
@@ -21,20 +21,21 @@ Dull guys are all the same, while cool souls each have their own shine.
 无趣的灵魂都是相同的，有趣的灵魂各有各的不同
 <!--more-->
 
-最近在知乎上看到一个[回答]()，里面提到[少有人走的路]()这本书里的一个观点：
+最近在知乎上看到一个回答里面提到[《少有人走的路》](https://link.zhihu.com/?target=http%3A//book.douban.com/subject/1775691/)这本书里的一个观点：
 
 > 人生本充满困难(life is difficult)，只不过有些人选择承受面对困难带来的痛苦，有些人选择承受逃避困难带来的痛苦。
 
-这话讲得对我胃口，让我想起罗曼罗兰曾将英雄主义定义为“认清了生活的真相后依然热爱生活”，而鲁迅也把真正的勇士描述成“敢于直面惨淡的人生，敢于正视淋漓的鲜血”。他们没有“人艰不拆[^1]”，都毫不避讳的把生活的阴暗面揭露出来，让人浑身难受，然后又慷慨的向我们指出一条出路，那便是去迎接这份挑战。
+这话讲得很对胃口，让我马上就想起了罗曼罗兰曾将英雄主义定义为“认清了生活的真相后依然热爱生活”，而鲁迅也把真正的勇士描述成“敢于直面惨淡的人生，敢于正视淋漓的鲜血”。哦，对了，说过类似话的还有王小波，他在那本《黄金时代》里直抒胸臆道：
+
+>天色微微向晚，天上飘着懒洋洋的云彩。下半截沉在黑暗里，上半截仍浮在阳光中。那一天我二十一岁，在我一生的黄金时代。我有好多奢望。我想爱，想吃，还想在一瞬间变成天上半明半暗的云。后来我才知道，生活就是个缓慢受锤的过程，人一天天老下去，奢望也一天天消失，最后变得像挨了锤的牛一样。可是我过二十一岁生日时没有预见到这一点。我觉得自己会永远生猛下去，什么也锤不了我。
+
+看来不管哪个时代，都是世道艰险。看透了这点的作家却并没有“人艰不拆[^1]”，反而毫不避讳的把生活的阴暗面揭露出来，真让人浑身难受；好在他们也顺手指了条出路，那便是去迎接这份挑战。不然能怎样呢？不然就变成那头受锤的牛。
+
+在现在这个信息爆炸的时代，纵使知识的传播与获取变得如此便捷而廉价，按理说接受了更多的刺激开拓了更大的眼界，被锤者应该更容易反应过来生活的真相然后生猛下去（though sometimes there's the wall），但其实去年底回国期间我总能感到一种“疲惫”感（我预想要是回国每天被现实狠狠锤到默认加班至晚上九、十点，那真是不得不疲惫）。有点像之前我在湾区工作的琐碎中安心过日子一眼望得到头的凝重，只是好像国内会多些焦虑的成分——于是突然明白为什么自己现在会喜欢纽约了，因为这里总有太多人做着（或许根本不切实际的）梦，激发着生猛的活力，让人产生“错觉”，觉得自己也可以一直生猛下去，去做自己想做的事，有趣的事，来撑起勇气，面对沉重的压力。
+
+所幸的是，今天的我们有太多的娱乐活动兴趣爱好可供选择，比如可以看电影、吃美食、听音乐、拍照片、去旅行；所不幸的是，很多时候，娱乐活动演变为简单的消费行为，兴趣爱好仅仅是又一次浅尝辄止——当喜欢电影指的是追看时下上映的热门影片，但既没去了解影片拍摄背景又不组织语言进行观后讨论更别提找类似题材的经典老片回味赏析；当喜欢美食只是遍尝各家餐厅后给他们排个序标记上，但并不关心美食美酒背后的食材选择和烹饪酿制流程的不同带来的味觉上的微妙差异；当喜欢音乐仅仅指的是喜欢听音乐类app里推荐的时下最火的音乐，但从未考虑过花时间去练习发声或乐器演奏的技巧；当喜欢摄影指的是喜欢用刚买的高端单反拍食物传到票圈分享，但毫无冲动去研究前期构图布光后期调色修图的相关技术；当喜欢旅游仅仅是提着两个大大的行李箱奔走在异地的商场里然后在主要景点拍到此一游，却未尝试过轻装上路毫无负担的像当地人般生活甚至专门学习一门外语来体会历史文化和自然风貌的异同。我总觉得这种程度的有趣在面对生活的真相时未免太苍白。
+
+所以当我最近看到，一位不知名的[音乐人](https://www.youtube.com/channel/UCTF4nmNOzKDIHHX0JcIJwZg)在他无人问津的~~Youtube~~[B站主页](http://www.bilibili.com/video/av17575121/#reply572883984)上传了一曲自制的原汁原味_Hotel California_ ；一个本科学艺术史的华人小哥（[尤雨溪](https://twitter.com/youyuxi)）在下班后的业余时间里凭一己之力开发的开源框架[Vue.js](https://vuejs.org/)同[React](https://reactjs.org/)和[Angular](https://angular.io/)三足鼎力；以及更多类似[TJ Holowaychuk](https://twitter.com/tjholowaychuk)、[Guillermo Rauch](https://twitter.com/rauchg)这样的独立开发者，即使不断经受着来自生活的锤打，依然默默创造着各自心中有趣而美好的事物，以创作者的身份，不断通过自己的作品回应生活的真相。
 
 
-https://twitter.com/tjholowaychuk
-
-http://tjholowaychuk.com/
-
-vue.js
-
-
-
-
-[^1]:据传出自林宥嘉的歌曲《说谎》中的一段歌词：“我没有说谎，我何必说谎。爱一个人，没爱到难道就会怎么样。别说我说谎，_**人**生已经如此的**艰**难，有些事情就**不**要**拆**穿_。” 继而在贴吧和暴走漫画被大量网友引用。
+[^1]:据传出自林宥嘉的歌曲《说谎》中的一段歌词：“我没有说谎，我何必说谎。爱一个人，没爱到难道就会怎么样。别说我说谎，`人`生已经如此的`艰`难，有些事情就`不`要`拆`穿。” 继而在贴吧和暴走漫画被大量网友引用。
