--- a/content/post/2018-01-17-iostream.md
+++ b/content/post/2018-01-17-iostream.md
@@ -35,7 +35,7 @@ So considering type safety and extensibility offered by the classes and function
     ...
  private:
     int n, d;
- frient ostream& operator<<(ostream& s, const Rational& r);
+ friend ostream& operator<<(ostream& s, const Rational& r);
  };
 
  ostream& operator<<(ostream& s, Rational& r) 
@@ -45,17 +45,19 @@ So considering type safety and extensibility offered by the classes and function
  }
 ```
 
-There are some subtle points worth attention: `operator<<` is not a member function (explained in item 19) and the `Rational` object to be output is passed as a reference-to-const rather than as an object (see item 22).
+There are some subtle points worth noting: `operator<<` is not a member function (explained in item 19) and the `Rational` object to be output is passed as a reference-to-`const` rather than as an object (see item 22).
 
-Howerver, there are still very few situations `<stdio.h>` may be more sensible to use:
-    1. Some implementations of iostream operations are less efficient than corresponding C stream operations, so it may make sense for applications requiring extreme performance.
-    2. During the course of standardization, iostream library was modified in some fundamental ways, so it may make sense for applications targeting at maximum portablility.
-    3. Since classes of the iostream library have constructors while functions in `<stdio.h>` do not, bwhen concerning about initialization order of static objects (see item 47) the standard C library may be more useful for you can always call it with impunity.
+Howerver, there are still very few situations where `<stdio.h>` may be more sensible to use:
+
+1. Some implementations of iostream operations are less efficient than corresponding C stream operations, so it may make sense for applications requiring extreme performance.
+2. During the course of standardization, iostream library was modified in some fundamental ways, so it may make sense for applications targeting at maximum portablility.
+3. Since classes of the iostream library have constructors while functions in `<stdio.h>` do not, when concerning about initialization order of static objects (see item 47) the standard C library may be more useful because you can always call it with impunity.
 
 ### By the way
 
-Technically speaking, the standardizatoin committee eliminated `<iostream.h>` in favor of `<iostream>` when they truncated the names of the other non-C standard header names, but chances are that most compilers support both of them. However, there is some subtle difference between them:
-    1. when `#include <iostream>`, the iostream library is ensconced within the namespace `std` (item 28)
-    2. when `#include <iostream.h>`, you get the thame elements but they are at global scope
+Technically speaking, the standardizatoin committee eliminated `<iostream.h>` in favor of `<iostream>` when they truncated the names of the other non-C standard header names, but chances are that most compilers support both of them. However, there is a subtle difference between them:
+
+1. when `#include <iostream>`, the iostream library is ensconced within the namespace `std` (item 28)
+2. when `#include <iostream.h>`, we get the same elements but they are at global scope
 
 Thus we usually prefer using `<iostream>` for name conflicts consideration.
