--- a/content/post/2018-01-03-coco.md
+++ b/content/post/2018-01-03-coco.md
@@ -21,7 +21,7 @@ metaAlignment: center
 
 昨晚在纽约看了去年底就在国内引起热议的Pixar新动画 _Coco_ 。外面天气很冻人，里面电影很动人。
 
-虽然不至于哭出来，但是能理解为什么很多人看完会想哭了。可能是因为被影片勾起了已故至亲的温暖回忆；可能是因为被主人公Miguel执着追求梦想的勇气打动心里充满了"seize the moment"的正能量；可能是心中还残留着些许被那根名为“为你着想”的“爱”的绳索束缚的痕迹所以自然代入了片中Miguel的叛逆行为；可能是因为最后Happy Ending的相互谅解大团圆结局让观众在那个瞬间有了宽恕一切的温暖仁慈；就算内心麻木不仁，可能全片动听的音乐，流畅的节奏和绚丽的画面也足够过把眼瘾值回票价了。不论能不能拿奥斯卡最佳动画奖，该片肯定是完成度很高的佳作无疑了。
+虽然不至于哭出来，但是能理解为什么很多人看完会想哭了。可能是因为被影片勾起了已故至亲的温暖回忆；可能是因为被主人公Miguel执着追求梦想的勇气打动心里充满了"seize the moment"的正能量；可能是心中还残留着些许被那根名为“为你着想”的“爱”的绳索束缚的痕迹所以自然代入了片中Miguel的叛逆行为；可能是因为最后Happy Ending的相互谅解大团圆结局让观众在那个瞬间有了宽恕一切的温暖仁慈；就算内心麻木不仁，可能全片动听的音乐，流畅的节奏和绚丽的画面也足够过把眼瘾值回票价了。不论能不能拿奥斯卡最佳动画奖，该片肯定是完成度很高的佳作无疑。
 
 片中对于死后世界的设定取材自墨西哥的传统节日亡灵节。我理解的片中对死后世界的构想是源于生者为了安慰在世时的灵魂所虚构的一种传统，考究这份传统的起源和发展将会是件很有趣的事情。虽然并不相信这份虚构的传统，但不得不承认，不管是否有死后需要依靠在世者的记忆才能存在的虚构世界，对活着的人来说，有亲人支持的现世生活总是比独行的世界更有温度的。每天放学下班回家，与家人互动会是件很让人感到有安全感的事情，如此一来平日里学习工作的劳累也会在互动中被稀释很多吧。只是任何事情都有两面，在享受亲情的热度带来的温暖的同时，也得掌握好这份温度的微妙距离和火候，否则就会被烫到了——Miguel自制的琴被Grandma砸了的时候我是真心疼，也就很能够理解他出走时的心情了。本片能在中国引起这么多共鸣和热议，我相信中国传统中相似的家庭观念是很重要的一个因素，[知乎](https://www.zhihu.com/question/57177072)上也有很多对此相关的讨论了。
 
