--- a/content/post/2018-01-17-iostream.md
+++ b/content/post/2018-01-17-iostream.md
@@ -8,9 +8,9 @@ tags:
 - technique
 - cpp
 slug: tips on iostream
-#autoThumbnailImage: false
-#thumbnailImagePosition: right
-#thumbnailImage: /images/2018-01-16.jpg
+autoThumbnailImage: false
+thumbnailImagePosition: right
+thumbnailImage: /images/2018-01-17.png
 ---
 
 Some tips about `<iostream>`
