new post created

--- a/content/post/2018-01-17-iostream.md
+++ b/content/post/2018-01-17-iostream.md
@@ -1,5 +1,5 @@
 ---
-title: "Item-2 Tips on <iostream>"
+title: "Item-2 Compare <iostream> to <stdio.h>"
 date: 2018-01-17T19:14:29-05:00
 categories:
 - article
