--- a/content/post/2017/2017-01-17-pentax-k70.md
+++ b/content/post/2017/2017-01-17-pentax-k70.md
@@ -9,7 +9,7 @@ tags:
 - pentax
 - 开箱体验
 slug: pentax k70
-thumbnailImagePosition: right
+thumbnailImagePosition: center
 thumbnailImage: /images/2017/2017-01-17-pentax-k70/6-3.jpg
 coverImage: /images/2017/2017-01-17-pentax-k70/6-3.jpg
 metaAlignment: center
