--- a/content/post/2017/2017-05-08-pentax-kp.md
+++ b/content/post/2017/2017-05-08-pentax-kp.md
@@ -9,7 +9,7 @@ tags:
 - pentax
 - 开箱体验
 slug: pentax kp
-thumbnailImagePosition: right
+thumbnailImagePosition: center
 thumbnailImage: /images/2017/2017-05-08-pentax-kp/1-1t.jpg
 coverImage: /images/2017/2017-05-08-pentax-kp/1-1t.jpg
 metaAlignment: center
