--- a/content/post/2019/06/2019-06-01-June-01.md
+++ b/content/post/2019/06/2019-06-01-June-01.md
@@ -30,8 +30,7 @@ Weekly shots - 2019/06/01
 {{< image classes="fancybox fig-33" src="/images/2019/06/01/biker_in_rain.jpeg"  title="↑Biker" >}}
 {{< image classes="fancybox fig-33" src="/images/2019/06/01/pic_in_rain.jpeg"  title="↑Taking pictures" >}}
 {{< image classes="fancybox fig-33" src="/images/2019/06/01/six_ave.jpeg"  title="↑Six Ave." >}}
-{{< image classes="cleawr fig-33" >}}
-
+{{< image classes="clear fig-33" >}}
 
 {{< image classes="fancybox fig-50" src="/images/2019/06/01/time_sq.jpeg"  title="↑Time Square" >}}
 {{< image classes="fancybox fig-50" src="/images/2019/06/01/reflection.jpeg"  title="↑Reflection" >}}
