--- a/content/post/2018/04/2018-04-22-lemon.md
+++ b/content/post/2018/04/2018-04-22-lemon.md
@@ -3,10 +3,9 @@ title: "[米津玄师]Lemon"
 date: 2018-04-22T14:10:15-04:00
 categories:
 - music
-- multi-instruments
+- instruments
 tags:
 - music
-- 米津玄师
 - clarinet
 - tin whistle
 - piano
