add toc into previous posts

--- a/content/post/2017/2017-05-08-pentax-kp.md
+++ b/content/post/2017/2017-05-08-pentax-kp.md
@@ -15,21 +15,22 @@ metaAlignment: center
 
 复古情怀向中端单反宾得KP开箱体验与实测心得。
 <!--more-->
+<!-- toc -->
 
 作为同焦段素质最好的镜头(滑稽)，宾得家的Limited镜头有着特立独行的设计理念。最新推出的kp作为其理想的亮骚后背[^1]，总算更加淋漓尽致的体现出了一众饼干头的追求方向：为了追求小巧不惜对镜头光圈进行妥协，强化操作体验并突显整个相机系统慢摄流的玩味属性，让人重拾按下快门的乐趣。单纯就外形而言可能有人会觉得KP的额头太大而更偏爱奥巴em5那样的造型(我也觉得em5造型更讨喜些);但不得不承认，宾得kp搭配众limited头的颜值至少是不低的.
 
-### 前言
+# 前言
 
 其实之前发K70那个帖子的时候已经说得很明白了，现在之所以还没灭宾得的门的原因很简单，就只是比较喜欢手头的那几个limited镜头，希望能时不时拿出来玩玩。既然最近宾得出了这个一定程度上是专门为了跟limited头搭配的机子，我想自己自然是迟早会买来玩玩的。
 
 理性的来讲，其实刚上市就买这么高溢价的机身是绝对绝对不明智的选择，而且我又并不急着想用到KP比K70多出来的那么一丁点的性能，所以手持K70等KP降价才是最佳购买策略。不过一想到最近办的那张信用卡搞活动可以在美亚上打九折，又想到我玩宾得其实玩的也就是个“情怀”，为“情怀”买单，那还是早买早享受吧——谁叫理光这次拿捏像我这类的目标用户的心理拿捏的这么准确呢？复古银色亮骚机身，既然看对眼了，也就只剩下掏出钞票买买买了。。。所以现在的我也更能够理解为何在日本市场奇葩的K-S1能卖那么火了——“K字母”系列的机型看来就是纯粹面向有个性需求的爱好者准备的机型，很多在主流摄影圈不能理解的设计其实恰恰是为了迎合这部分消费者的需求，正如ks1的亮瞎眼跑马灯以及kp那握感并不好的可更换手柄。
 
-### 开箱
+# 开箱
 
 {{< image classes="fancybox fig-50" src="/images/2017/2017-05-08-pentax-kp/8-2t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-2t.jpg" title="↑说明书、dcu5安装盘，保修卡，宣传单，换手柄的小扳手" >}}
 {{< image classes="clear fig-50" src="/images/2017/2017-05-08-pentax-kp/8-3t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/8-3t.jpg" title="↑取出机身" >}}
 
-### 外观
+# 外观
 
 {{< image classes="fancybox nocaption fig-50" src="/images/2017/2017-05-08-pentax-kp/1-1t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/1-1t.jpg" >}}
 {{< image classes="fancybox nocaption fig-50" src="/images/2017/2017-05-08-pentax-kp/1-2t.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/1-2t.jpg" >}}
@@ -60,7 +61,7 @@ metaAlignment: center
 
 ↑搭配三阳10mm f2.8。镜头太大和比有些不协调。
 
-#### 机身细节
+## 机身细节
 
 * 底部
 
@@ -89,7 +90,7 @@ metaAlignment: center
 
 机身上默认安装的是小号手柄，握感和GR类似，不过手持起来比GR沉很多；中号手柄握感我觉得跟小号没啥区别；大号手柄则因为前方有比较明显的着力点，装上之后手感更像传统单反，但是依然没有k5或者K70那种手柄来的舒服。这种设计明显是为了颜值而牺牲了握感。但可能是GR握习惯了，我一般用小号手柄。
 
-### 使用感受
+# 使用感受
 
 用下来发觉最大的问题在可靠性上，首当其冲的便是脆弱的电池——前段时间去了阿拉斯加，在室外零下30°环境下相机很容易被冻没电，白天大概能坚持几十分钟，晚上可能就十几分钟，长时间曝光的话拍不了几张就自动关机。我只能不停地轮流更换手头的3块电池——每次揣两块在大衣的内兜里，等温度上来恢复电力之后再接着用（来回换电池实在太麻烦了，尤其是自拍的时候突然没电了特别火大）。本来还想测试下相机里面的星轨和延时摄影功能的，但是极地寒冷室外条件下，放十几分钟没拍几张就自动断电，根本行不通。所以最后也没能拍成星轨和延时摄影。需要提高的另一个方面就是手机app——有时候会莫名其妙的无法同步画面，且手机无法遥控释放快门，逼得最后我只能用延时自拍模式连拍10张来搞定旅行合影照。
 
@@ -97,7 +98,7 @@ metaAlignment: center
 
 可以看出来，在恶劣环境下可靠性主要还是被电池拖累太多。风光照当然可以拍，画质出众高感在aps-c里也是位列前茅，只是没了GPS少了追星功能还是挺可惜的。极地环境下靠三防机身倒是可以顶住阿拉斯加白天雪地里雪洒机身上的不利情况，这点还是不错的。如果就像[宣传片](https://youtu.be/Rnu4JsmmOW8)里展示的那样，拿kp配个20-40，在旅游时去拍拍扫街照，这机子还是很能胜任的。
 
-### 样片
+# 样片
 
 {{< image classes="fancybox nocaption fig-50" src="/images/2017/2017-05-08-pentax-kp/7-0.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/7-0t.jpg" >}}
 {{< image classes="fancybox nocaption fig-50" src="/images/2017/2017-05-08-pentax-kp/7-1.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/7-1t.jpg" >}}
@@ -108,7 +109,7 @@ metaAlignment: center
 {{< image classes="fancybox nocaption fig-25" src="/images/2017/2017-05-08-pentax-kp/7-5.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/7-5t.jpg" >}}
 {{< image classes="clear nocaption fig-25" src="/images/2017/2017-05-08-pentax-kp/7-7.jpg" thumbnail="/images/2017/2017-05-08-pentax-kp/7-7t.jpg" >}}
 
-### 总结
+# 总结
 
 和自家APS-C机身比，KP有着亮骚的优点（我从K70换KP的主要原因）以及相对以往机身可感知但仍不堪重用的对焦改进，但续航是硬伤。相比佳能尼康同价位机器，优点有
 
@@ -125,7 +126,7 @@ metaAlignment: center
 
 此外就是外观和可更换手柄见仁见智，有人喜欢有人讨厌。但总的来说，这是有着很不错的画质，足够性能的相机，配上几枚limited镜头，够把玩很久，是那种适合悠闲的慢摄流在心情好的空暇时品玩的东西。如果作为摄影爱好者想在APS-C相机中找一台亮骚好玩的，那在富士的X系列外，宾得这款KP也可算是值得考虑的对象吧。
 
-#### 参考
+## 参考
 [dpreview](https://www.dpreview.com/reviews/pentax-kp-review)  
 [PNETAX KP-開箱實測&心得&實拍](http://pentaxfans.net/thread-159858-1-1.html)  
 [感光度直衝80萬！五軸防手震加持 Pentax KP](https://www.mobile01.com/newsdetail/21324/pentax-kp-iso-819200)
