--- a/content/post/2019/06/2019-06-22-June-the-22nd.md
+++ b/content/post/2019/06/2019-06-22-June-the-22nd.md
@@ -35,7 +35,7 @@ Weekly shots - 2019/06/22
 {{< image classes="fancybox fig-50" src="/images/2019/06/22/bluestone_lane.JPG"  title="↑Bluestone Lane" >}}
 {{< image classes="fancybox fig-50" src="/images/2019/06/22/latte.JPG"  title="↑Partners Coffee" >}}
 {{< image classes="clear fig-50" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/06/22/grumpy.JPG"  title="↑Caffee Grumpy" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/06/22/grumpy.JPG"  title="↑Café Grumpy" >}}
 
 # The street
 {{< image classes="fancybox fig-100" src="/images/2019/06/22/doggy.JPG"  title="↑The dog" >}}
