add cover images for weekly shots

--- a/content/post/2019/05/2019-05-04-may-4th.md
+++ b/content/post/2019/05/2019-05-04-may-4th.md
@@ -11,6 +11,8 @@ slug: 2019 05 04 street photography
 autoThumbnailImage: true
 thumbnailImagePosition: right
 thumbnailImage: /images/2019/05/04/union_sq.jpeg
+coverImage: /images/2019/05/04/union_sq.jpeg
+metaAlignment: center
 ---
 
 Weekly shots - May the 4th (be with you)..
