--- a/content/post/2019/05/2019-05-25-may-25.md
+++ b/content/post/2019/05/2019-05-25-may-25.md
@@ -11,14 +11,14 @@ slug: 2019 05 25 street photography
 autoThumbnailImage: true
 thumbnailImagePosition: right
 thumbnailImage: /images/2019/05/25/hide.jpeg
+coverImage: /images/2019/05/25/riverside.jpeg
+metaAlignment: center
 ---
 
 Weekly shots - 2019/05/25
 <!--more-->
 
 .
-{{< image classes="fancybox fig-100" src="/images/2019/05/25/riverside.jpeg"  title="↑Reverside" >}}
-
 {{< image classes="fancybox fig-33" src="/images/2019/05/25/squirrel.jpeg"  title="↑Squirrel" >}}
 {{< image classes="fancybox fig-33" src="/images/2019/05/25/red.jpeg"  title="↑Red" >}}
 {{< image classes="fancybox fig-33" src="/images/2019/05/25/geese.jpeg"  title="↑Geese" >}}
@@ -31,3 +31,4 @@ Weekly shots - 2019/05/25
 {{< image classes="clear fig-50" >}}
 
 {{< image classes="fancybox fig-100" src="/images/2019/05/25/road.jpeg"  title="↑Road" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/05/25/riverside.jpeg"  title="↑Reverside" >}}
