--- a/content/post/2019/06/2019-06-01-June-01.md
+++ b/content/post/2019/06/2019-06-01-June-01.md
@@ -11,6 +11,8 @@ slug: 2019 06 01 street photography
 autoThumbnailImage: true
 thumbnailImagePosition: right
 thumbnailImage: /images/2019/06/01/look_down.jpeg
+coverImage: /images/2019/06/01/look_down.jpeg
+metaAlignment: center
 ---
 
 Weekly shots - 2019/06/01
