--- a/content/post/2019/06/2019-06-08-June-08.md
+++ b/content/post/2019/06/2019-06-08-June-08.md
@@ -11,6 +11,8 @@ slug: 2019 06 08 street photography
 autoThumbnailImage: true
 thumbnailImagePosition: right
 thumbnailImage: /images/2019/06/08/moon_plane.jpeg
+coverImage: /images/2019/06/08/moon_plane.jpeg
+metaAlignment: center
 ---
 
 Weekly shots - 2019/06/08
