--- a/content/post/2019/06/2019-06-15-June-15.md
+++ b/content/post/2019/06/2019-06-15-June-15.md
@@ -11,6 +11,8 @@ slug: 2019 06 15 street photography
 autoThumbnailImage: true
 thumbnailImagePosition: right
 thumbnailImage: /images/2019/06/15/birds.jpeg
+coverImage: /images/2019/06/15/birds.jpeg
+metaAlignment: center
 ---
 
 Weekly shots - 2019/06/15
