add ordinal number for weekly shots

--- a/content/post/2019/05/2019-05-04-may-4th.md
+++ b/content/post/2019/05/2019-05-04-may-4th.md
@@ -1,5 +1,5 @@
 ---
-title: "[Weekly] May the 4th.."
+title: "[Weekly-1] May the 4th.."
 date: 2019-05-04
 categories:
 - photography
@@ -18,7 +18,7 @@ metaAlignment: center
 Weekly shots - May the 4th (be with you)..
 <!--more-->
 
-最近读了Twyla Tharp的[The Creative Habit](https://www.goodreads.com/book/show/254799.The_Creative_Habit),很受启发。我决定每天下班回家的时候，在纽约的街头多走走，用随身的手机/相机街拍。每周六就节选出比较好的照片发到这里来，作为岁月的留念。
+最近读了Twyla Tharp的[The Creative Habit](https://www.goodreads.com/book/show/254799.The_Creative_Habit),很受启发。我决定每天下班回家的时候，在纽约的街头多走走，用随身的手机街拍。每周六就节选出比较好的照片发到这里来，作为岁月的留念。
 
 .
 {{< image classes="fancybox fig-100" src="/images/2019/05/04/union_sq.jpeg" thumbnail="/images/2019/05/04/union_sq.jpeg" title="↑Union Square" >}}
