--- a/content/post/2019/06/2019-06-22-June-the-22nd.md
+++ b/content/post/2019/06/2019-06-22-June-the-22nd.md
@@ -1,5 +1,5 @@
 ---
-title: "[Weekly] June the 22nd.."
+title: "[Weekly-8] June the 22nd.."
 date: 2019-06-22T18:37:03-04:00
 categories:
 - photography
