update cdn for imageload

--- a/content/post/2019/06/2019-06-15-June-15.md
+++ b/content/post/2019/06/2019-06-15-June-15.md
@@ -26,7 +26,9 @@ Weekly shots - 2019/06/15
 {{< image classes="fancybox fig-33" src="/images/2019/06/15/shoot.jpeg"  title="↑Shoot" >}}
 {{< image classes="clear fig-33" >}}
 
-{{< image classes="fancybox fig-50" src="/images/2019/06/15/idle.jpeg"  title="↑Think" >}}
-{{< image classes="fancybox fig-50" src="/images/2019/06/15/hold.jpg"  title="↑Hold" >}}
+{{< image classes="fancybox fig-33" src="/images/2019/06/15/idle.jpeg"  title="↑Think" >}}
+{{< image classes="fancybox fig-33" src="/images/2019/06/15/hold.jpg"  title="↑Hold" >}}
+{{< image classes="fancybox fig-33" src="/images/2019/06/15/wait.jpeg"  title="↑Wait" >}}
+{{< image classes="clear fig-33" >}}
 
 {{< image classes="fancybox fig-100" src="/images/2019/06/15/chat.jpeg"  title="↑Chat" >}}
