add reference for excerpt

--- a/content/post/2019/07/2019-07-07-July-7.md
+++ b/content/post/2019/07/2019-07-07-July-7.md
@@ -51,3 +51,4 @@ Weekly shots - 2019/07/07
 一个爱我的人，如果爱得讲话结结巴巴，语无伦次，我就知道他爱我。  
 凡真的先知，总是时而雄辩，时而结巴。凡是他说不上来的时候，我最爱他。  
 假先知都是朗朗上口的。我全不信。我知道他不爱。  
+Excerpt From: 木心. “文学回忆录.” 
