small change for caption

--- a/content/post/2019/07/2019-07-07-July-7.md
+++ b/content/post/2019/07/2019-07-07-July-7.md
@@ -36,7 +36,7 @@ Weekly shots - 2019/07/07
 # The animal
 {{< image classes="fancybox fig-100" src="/images/2019/07/07/dog.JPG"  title="↑Dog as a bull" >}}
 {{< image classes="fancybox fig-100" src="/images/2019/07/07/butterfly.JPG"  title="↑Butterfly as an autumn leaf" >}}
-{{< image classes="fancybox fig-100" src="/images/2019/07/07/eyes.JPG"  title="↑Human eyes" >}}
+{{< image classes="fancybox fig-100" src="/images/2019/07/07/eyes.JPG"  title="↑Narcissus" >}}
 
 # The excerpt
 >关于“打右脸给左脸，勿以眼还眼、以牙还牙，爱仇敌……”这几段话，是无抵抗主义的最高纲领。甘地、托尔斯泰都遵守，都信以为真，身体力行。  
