--- a/content/post/2019/06/2019-06-15-June-15.md
+++ b/content/post/2019/06/2019-06-15-June-15.md
@@ -2,7 +2,7 @@
 title: "[Weekly-7] June the 15th.."
 date: 2019-06-15T18:06:09-04:00
 categories:
-- photography
+- visual
 - weekly
 tags:
 - street
