--- a/content/post/2019/07/2019-07-07-July-7.md
+++ b/content/post/2019/07/2019-07-07-July-7.md
@@ -2,7 +2,7 @@
 title: "[Weekly-10] July the 7th.."
 date: 2019-07-07T11:54:31-04:00
 categories:
-- photography
+- visual
 - weekly
 tags:
 - street
