--- a/content/post/2019/07/2019-07-14-weekly.md
+++ b/content/post/2019/07/2019-07-14-weekly.md
@@ -30,3 +30,16 @@ Weekly shots - 2019/07/14
 如[上篇博客](/2019/07/engineering-is-magic/)所说，我决定在今后的weekly visual project中加入generative art的部分，以程序作画笔来绘制些视觉效果。下面的这张图是利用P5.js实现Jared Tarbell在2003年的作品[Substrate](http://www.complexification.net/gallery/machines/substrate/)。绘制过程本身是动态的，可以[点击这里](/2019/07/engineering-is-magic/#substrate)查看。
 
 {{< image classes="fancybox fig-100" src="/images/2019/07/14/substrate.jpg"  title="↑Substrate" >}}
+
+# The excerpt
+
+>传道散了，耶稣独自在海面走。门徒惊异，耶稣说勿惊。彼得也从水面走去，怕落水，呼救，耶稣拉他的手近拢，说：你这小信的人，为什么不信我？  
+\.\.\.  
+以宗教看，奇迹之一，是用寓言对待其象征性。一个人能否成大器，主观因素最重要，被人忽略的是信心，是信念。信心，信念，一半凭空想，一半凭行动（用功、才能等等）。我的大半生，阅人多矣，阅艺术家多矣。确切说，想成为艺术家者多矣，此后生如行于海，磨难如风浪，但太多人行于海，怕沉没，害怕了，有人沉没，有人时浮时沉。  
+一路多小信的人。  
+我不比人慧，不比人强，数十年间认识的精英分子前后六批，凡五十人，有大才，甚至天才，至今剩我一人。如果他们成了，文艺复兴。  
+下了海，要走下去。  
+\.\.\.  
+信心到底哪里来？信心就是忠诚。立志，容易。忠诚其志，太难。许多人立志，随立随毁，不如不立。艺术，爱情，政治，商业，都要忠诚。求道，坚定忠诚无疑，虽蹈海，也走下去。  
+所谓第二流者，是原来志在一流，天时、地利、人和，均不合，成了二流。如果甘于二流三流，已经居下流了。  
+Excerpt From: 木心. “文学回忆录.” 
