change to visual project

--- a/content/post/2019/07/2019-07-14-weekly.md
+++ b/content/post/2019/07/2019-07-14-weekly.md
@@ -16,7 +16,7 @@ coverImage: /images/2019/07/14/reflection.JPG
 metaAlignment: center
 ---
 
-Weekly shots - 2019/07/14
+Weekly visual project - 2019/07/14
 <!--more-->
 <!-- toc -->
 
