--- a/content/post/2019/07/2019-07-14-weekly.md
+++ b/content/post/2019/07/2019-07-14-weekly.md
@@ -25,7 +25,7 @@ Weekly visual project - 2019/07/14
 {{< image classes="fancybox fig-100" src="/images/2019/07/14/true-north.JPG"  title="↑True north" >}}
 {{< image classes="fancybox fig-100" src="/images/2019/07/14/reflection.JPG"  title="↑Reflection of Tisch building" >}}
 
-# The generative art
+# The generative
 
 如[上篇博客](/2019/07/engineering-is-magic/)所说，我决定在今后的weekly visual project中加入generative art的部分，以程序作画笔来绘制些视觉效果。下面的这张图是利用P5.js实现Jared Tarbell在2003年的作品[Substrate](http://www.complexification.net/gallery/machines/substrate/)。绘制过程本身是动态的，可以[点击这里](/2019/07/engineering-is-magic/#substrate)查看。
 
